This is a brief overview of user-visible changes in AdPlug/XMMS.

Changes for version 1.2:
- Bugfix: When pressing pause and then stop, XMMS did lock up.

Changes for version 1.1:
- Made the installation target directory configurable through the
  'xmms_input_plugin_dir' variable.
- Implemented "Formats" config-dialog tab.
- Implemented "Quick detect" feature.
- Added tooltips.